[tool.poetry]
name = "streamlit-ceylon-example"
version = "0.1.0"
description = ""
authors = ["dewmal <dewmal@syigen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
ceylon = "^0.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

