[tool.poetry]
name = "streamlit-ceylon-example"
version = "0.1.0"
description = ""
authors = ["dewmal <dewmal@syigen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
ceylon = "^0.16.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.scripts]
build = "poetry build"
install-ceylon = "pip install --no-use-pep517 ceylon==0.16.3"

[tool.poetry.dev-dependencies]
maturin = ">=1.1,<2.0"